--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,8 @@
 		<jackson.version>1.9.11</jackson.version>
 		
 		<!-- MongoDB and Spring Data. -->
-		<spring.data.mongodb.version>1.2.1.RELEASE</spring.data.mongodb.version>
+		<spring.data.mongodb.version>1.3.2.RELEASE</spring.data.mongodb.version>
+		<spring.data.jpa.version>1.4.2.RELEASE</spring.data.jpa.version>
 		<mongo.java.driver.version>2.9.3</mongo.java.driver.version>
 		<jdk.version>1.6</jdk.version>
 		<junit.version>4.9</junit.version>
