--- a/vectura-api/pom.xml
+++ b/vectura-api/pom.xml
@@ -132,12 +132,21 @@
 			<artifactId>commons-lang</artifactId>
 			<version>2.4</version>
 		</dependency>
-		<!-- Document generation. -->
-		<dependency>
+		
+		<!-- Document generation. 
+		NOTE: Swagger annotations conflict with JAX-RS ones. -->
+		<!--dependency>
             <groupId>com.wordnik</groupId>
             <artifactId>swagger-jaxrs_2.9.1</artifactId>
             <version>${swagger.version}</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency-->
+        
+        <dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-annotations_2.10</artifactId>
+			<version>1.3.0</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
