--- a/vectura-business/src/test/resources/vectura-test.properties
+++ b/vectura-business/src/test/resources/vectura-test.properties
@@ -1,6 +1,6 @@
 #
 # MongoDB
-mongodb.database.host=74.109.113.241
+mongodb.database.host=tomcat.nebulent.com
 mongodb.database.port=27017
 mongodb.database.username=
 mongodb.database.password=
