--- a/vectura-web/src/main/resources/vectura-web-dev.properties
+++ b/vectura-web/src/main/resources/vectura-web-dev.properties
@@ -1,6 +1,6 @@
 #
 # MongoDB
-mongodb.database.host=localhost
+mongodb.database.host=tomcat.nebulent.com
 mongodb.database.port=27017
 mongodb.database.username=
 mongodb.database.password=
@@ -18,12 +18,11 @@ mongodb.database.write-timeout=0
 mongodb.database.write-fsync=true
 #
 # Http.
-http.port=9090
 http.basicauth.user=someCrazyUzerNm
 http.basicauth.password=Theoisd89sufdkkted23
 #
 # Rabbit MQ.
-rabbitmq.host=54.235.69.225
-rabbitmq.port=5672
-rabbitmq.username=guest
-rabbitmq.password=guest
+#rabbitmq.host=173.49.55.68
+#rabbitmq.port=5672
+#rabbitmq.username=guest
+#rabbitmq.password=guest
