Fully working Tomcat/Jetty version without MuleESB.

--- a/vectura-api/pom.xml
+++ b/vectura-api/pom.xml
@@ -83,6 +83,18 @@
 			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-service-description</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-client</artifactId>
+			<version>${cxf.version}</version>
+		</dependency>
+		
+
 		<!-- Spring. -->
 		<dependency>
 			<groupId>org.springframework</groupId>
