--- a/pom.xml
+++ b/pom.xml
@@ -49,21 +49,23 @@
 		<com.sun.jersey.version>1.8</com.sun.jersey.version>
 
 		<!-- General Libraries. -->
-		<cxf.version>2.6.1</cxf.version>
+		<cxf.version>3.0.2</cxf.version>
 		<spring.version>4.0.6.RELEASE</spring.version>
+		<camel.version>2.14.1</camel.version>
+		<jackson.version>2.4.1</jackson.version>
+		
 		<spring.ampq.version>1.2.0.RELEASE</spring.ampq.version>
 		<spring.security.version>3.2.5.RELEASE</spring.security.version>
 		<hibernate.version>3.6.10.Final</hibernate.version>
 		<mysql-version>5.1.22</mysql-version>
-		<jackson.version>2.4.3</jackson.version>
 		
 		<!-- MongoDB and Spring Data. -->
 		<spring.data.mongodb.version>1.6.1.RELEASE</spring.data.mongodb.version>
 		<spring.data.jpa.version>1.4.2.RELEASE</spring.data.jpa.version>
 		<mongo.java.driver.version>2.12.3</mongo.java.driver.version>
-		<jdk.version>1.7</jdk.version>
-		<junit.version>4.9</junit.version>
-		<slf4j.version>1.7.5</slf4j.version>
+		<jdk.version>1.6</jdk.version>
+		<junit.version>4.11</junit.version>
+		<slf4j.version>1.7.7</slf4j.version>
 	</properties>
 	<dependencies>
 		<!-- All for testing. -->
@@ -83,7 +85,6 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
