--- a/vectura-web/src/main/webapp/WEB-INF/web.xml
+++ b/vectura-web/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/api/v1/*</url-pattern>
 	</filter-mapping>
  
 	<servlet>
